fix dark mode - add support for German

--- a/src/index.css
+++ b/src/index.css
@@ -47,3 +47,9 @@ h1 {
     color: #747bff;
   }
 }
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    color: rgba(0, 0, 0, 0.87);
+  }
+}
